# IEEE-CIS-Fraud-Detection-Platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
api/: main.py  schemas.py
configs/: model_config.yaml
docker/: Dockerfile.api  Dockerfile.training
docs/: architecture.md  model_card.md  production.md
docs/adr/: ADR-001-model-architecture.md  ADR-002-feature-selection-rfe.md
monitoring/: init_db.sql
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda_and_baselines.ipynb  train_gpu_colab.ipynb
pipelines/: prefect.yaml  training_pipeline.py
reports/benchmark/: benchmark_results.json  benchmark_results.md
requirements/: api.txt  base.txt  dev.txt  training.txt
src/: batch_score.py  config.py  registry.py  train.py  tune.py
src/data/: __init__.py
src/data_prep/: data_loader.py
src/deployment/: batch_score.py  registry.py
src/evaluation/: ablation.py  benchmark.py  calibration.py  metrics.py  plots.py
src/feature_engineering/: build_features.py
src/features/: build_features.py
src/models/: __init__.py  gnn_tree.py  mlp_tree.py  pytorch_mlp.py  train_nn.py  transformer_tree.py  tree_models.py
src/monitoring/: drift.py
src/preprocessing/: data_loader.py
src/research/: __init__.py  experiment_logger.py  feature_inspector.py
src/research_tools/: __init__.py  experiment_logger.py  feature_inspector.py
tests/: conftest.py  test_api.py  test_data_prep.py  test_models.py  test_preprocessing.py  test_research_tools.py
(+13 files in other folders)
