[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection_platform"
version = "1.0.0"
description = "Production-grade ML platform for IEEE-CIS fraud detection"
authors = [
    { name = "Jasmine Chen" }
]
requires-python = ">=3.9"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
